# dotty

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
dotty/: __init__.py  base.py
tests/: test_dotty.py
