[tool.poetry]
name = "dotty"
version = "0.1"
description = "A tiny wrapper offering dot notation for dicts and nested dicts."
authors = ["binchick-in <pypi@binchick.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
mypy = "^1.6.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
